@@ -11,38 +11,44 @@ class QPaintEvent;
 
 class HexViewer : public QFrame
 {
-	Q_OBJECT;
+	Q_OBJECT
 public:
 	HexViewer(QWidget* parent = 0);
 
-	void setData(const char* name, unsigned char* datPtr, int datLength);
+	void setDebuggable( const QString& name, int size );
 	void refresh();
 
 	QSize sizeHint() const;
 
 public slots:
 	void setLocation(int addr);
-
+	void settingsChanged();
+	
 protected:
 	void resizeEvent(QResizeEvent* e);
 	void paintEvent(QPaintEvent* e);
 
 private:
-	void setScrollBarValues();
+	void setSizes();
 	void hexdataTransfered(HexRequest* r);
 	void transferCancelled(HexRequest* r);
 
 	QScrollBar* vertScrollBar;
 
+	// layout
 	int frameL, frameR, frameT, frameB;
+	bool adjustToWidth;
 	short horBytes;
-	double visibleLines;
-	bool waitingForData;
-
-	QString dataName;
+	int visibleLines, partialBottomLine;
+	int	lineHeight, xAddr, xData, dataWidth, charWidth;
+	int addressLength;
+	
+	// data
+	QString debuggableName;
+	int debuggableSize;
 	int hexTopAddress;
 	unsigned char* hexData;
-	int hexDataLength;
+	bool waitingForData;
 
 	friend class HexRequest;
 };
