@@ -1,5 +1,8 @@
 $Id$
 
+2007-02-11 Edwin Velds <e.velds@gmail.com>
+	* Made the HexViewer code usable to view any debuggable.
+
 2007-02-06 Edwin Velds <e.velds@gmail.com>
 	* Removed launch button in connect dialog.
 	* Added signals to react to settings and symbol changes.
